The address text in the bubbles were overflowing to the thirdline; now fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -673,7 +673,7 @@ a:focus {
       display: flex;
       justify-content: space-between;
       width: 225px;
-      padding: 12px 45px;
+      padding: 12px 35px;
       background-color: $white;
       border-radius: 50px;
       margin-top: -25px;
